Start using privateLookup (close #908)
# Conflicts:
#	core/src/main/java/org/easymock/internal/ClassProxyFactory.java